# cmake_example

./: .gitignore  README.md  build.bat
libawesome/: CMakeLists.txt  hello_world.cpp
libawesome/libawesome/: CMakeLists.txt  awesome.cpp  awesome.hpp
src/: CMakeLists.txt  hello_world.cpp
src/hello/: CMakeLists.txt  speaker.cpp  speaker.hpp
