PROJECT(libawesome)

ADD_LIBRARY(${PROJECT_NAME}
  awesome.hpp
  awesome.cpp)

FOREACH(_CONFIG ${CMAKE_CONFIGURATION_TYPES})
	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib/${CMAKE_GENERATOR}/${_CONFIG} CONFIGURATIONS ${_CONFIG})
ENDFOREACH()

INSTALL(FILES awesome.hpp DESTINATION include/${PROJECT_NAME})
